--- a/less/carousel.less
+++ b/less/carousel.less
@@ -78,8 +78,8 @@
 		text-shadow: 0 0 18px rgba(0,0,0,.6);
 
 		h4 {
-			font-size: 45px;
-			max-width: 500px;
+			font-size: 38px;
+			max-width: 95%;
 			letter-spacing: 1px;
 			.font-base;
 			font-weight: 800;
