--- a/less/navbar.less
+++ b/less/navbar.less
@@ -55,25 +55,25 @@
 		padding-left: 0;
 	}
 	.navbar-nav {
-		@media (max-width: @screen-xs-max) {
+		@media (max-width: @screen-sm-max) {
 			margin-left: 10px;
 			margin-right:0;
 		}
 	}
 	.navbar-default {
 		.box-shadow(none);
-		@media (max-width: @screen-xs-max) {
+		@media (max-width: @screen-sm-max) {
 			.box-shadow(0 1px 3px rgba(0,0,0,.065));
 		}
 		border-radius: 0;
 		background: transparent;
 		.navbar-form {
-			@media (max-width: @screen-xs-max) {
+			@media (max-width: @screen-sm-max) {
 				margin-left: 0;
 				.box-sizing(border-box);
 				margin:0 auto;
 			}
-			@media (min-width: @screen-sm-min) {
+			@media (min-width: @screen-md-min) {
 				float: right !important;
 			}
 			border-radius: 3px;
@@ -100,7 +100,7 @@
 					top: 2px;
 					font-size: 18px;
 					@media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
-						right: -16px;
+						right: 16px;
 					}
 				}
 			}
@@ -307,11 +307,11 @@
 	border: none;
 	background-color: @dropdown-bg;
 	border-radius: 3px;
-	@media (max-width: @screen-xs-max) {
+	@media (max-width: @screen-sm-max) {
 		background-color: #f9f9f9 !important;
 		.box-shadow(inset 0 0 40px rgba(0,0,0,.05));
 	}
-	@media (min-width: @screen-sm-min) {
+	@media (min-width: @screen-md-min) {
 		.box-shadow(0 3px 1px rgba(0,0,0,.05));
 		&:before {
 			content: "";
@@ -376,7 +376,7 @@
 	}
 }
 
-@media (max-width: @screen-xs-max) {
+@media (max-width: @screen-sm-max) {
 	.navbar-brand {
 		padding-left:0;
 		padding-top: 13px;
