--- a/less/navbar.less
+++ b/less/navbar.less
@@ -14,7 +14,7 @@
 	}
 }
 .site-header {
-	@media (max-width: @screen-xs-max) {
+	@media (max-width: @screen-sm-max) {
 		position: fixed;
 		top:0;
 		width: 100%;
@@ -24,29 +24,27 @@
 	}
 	.navbar-nav {
 
-		@media (min-width: @screen-sm-min) {
+		@media (min-width: @screen-md-min) {
 			margin-left: -11px;
 		}
 	}
 	.navbar {
 		margin-bottom: 0;
 		border-bottom: none;
-		
-		
 	}
 	.navbar-brand {
 		height: auto;
-		@media (max-width: @screen-xs-max) {
+		@media (max-width: @screen-sm-max) {
 			padding-top:5px;
 			padding-bottom: 5px;
 		}
-		@media (min-width: @screen-sm-min) {
+		@media (min-width: @screen-md-min) {
 			padding-top: 30px;
 		}
 	}
 	.navbar-header {
 		clear: left;
-		@media (max-width: @screen-xs-max) {
+		@media (max-width: @screen-sm-max) {
 			margin-right: -10px;
 			margin-left: -10px;
 		}
@@ -100,7 +98,7 @@
 					top: 2px;
 					font-size: 18px;
 					@media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
-						right: 16px;
+						right: 0;
 					}
 				}
 			}
@@ -237,7 +235,7 @@
 	}
 }
 #header_wrap.sticky {
-	@media (min-width: @screen-sm-min) {
+	@media (min-width: @screen-md-min) {
 		position: fixed;
 		width: 100%;
 		z-index: 900;
@@ -250,11 +248,11 @@
 		padding-top:5px;
 		padding-bottom: 5px;
 		display: none;
-		@media (max-width: @screen-xs-max){
+		@media (max-width: @screen-sm-max){
 			display: block !important;
 		}
 	}
-	@media (min-width: @screen-sm-min) {
+	@media (min-width: @screen-md-min) {
 		.nav-item-home {
 			display: none;
 		}
@@ -393,6 +391,10 @@
 		background-color: @brand-primary;
 		border-color: @brand-primary !important;
 		color: #fff;
+		margin-right: 27px;
+		@media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+			margin-right: 10px;
+		}
 	}
 	.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
 		background-color: @brand-primary;
