--- a/css/theme.css
+++ b/css/theme.css
@@ -8028,7 +8028,7 @@ a:hover {
     padding-left: 25px;
   }
 }
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .site-header {
     position: fixed;
     top: 0;
@@ -8038,7 +8038,7 @@ a:hover {
     border: none !important;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .site-header .navbar-nav {
     margin-left: -11px;
   }
@@ -8050,13 +8050,13 @@ a:hover {
 .site-header .navbar-brand {
   height: auto;
 }
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .site-header .navbar-brand {
     padding-top: 5px;
     padding-bottom: 5px;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .site-header .navbar-brand {
     padding-top: 30px;
   }
@@ -8064,7 +8064,7 @@ a:hover {
 .site-header .navbar-header {
   clear: left;
 }
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .site-header .navbar-header {
     margin-right: -10px;
     margin-left: -10px;
@@ -8138,7 +8138,7 @@ a:hover {
 }
 @media (min-width: 768px) and (max-width: 991px) {
   .site-header .navbar-default .navbar-form .form-group:before {
-    right: 16px;
+    right: 0;
   }
 }
 .site-header .navbar-default .navbar-form .form-control {
@@ -8278,7 +8278,7 @@ a:hover {
 #header_wrap .nav-item-logo {
   display: none;
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   #header_wrap.sticky {
     position: fixed;
     width: 100%;
@@ -8294,12 +8294,12 @@ a:hover {
   padding-bottom: 5px;
   display: none;
 }
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   #header_wrap.sticky .navbar-brand {
     display: block !important;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   #header_wrap.sticky .nav-item-home {
     display: none;
   }
@@ -8453,11 +8453,17 @@ a:hover {
     background-color: #086291;
     border-color: #086291 !important;
     color: #fff;
+    margin-right: 27px;
   }
   .navbar-default .navbar-toggle:hover,
   .navbar-default .navbar-toggle:focus {
     background-color: #086291;
     border-color: #086291 !important;
+  }
+}
+@media (max-width: 991px) and (min-width: 768px) and (max-width: 991px) {
+  .navbar-toggle {
+    margin-right: 10px;
   }
 }
 .carousel-inner-wrapper {
@@ -8470,6 +8476,12 @@ a:hover {
   .carousel-inner-wrapper {
     float: left;
     width: 66.66666667%;
+  }
+}
+@media (max-width: 767px) {
+  .carousel-inner-wrapper {
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
 .carousel-fade .carousel-inner {
@@ -8527,6 +8539,12 @@ a:hover {
 }
 .carousel-fade .carousel-control .ion-chevron-right {
   right: 5px !important;
+}
+@media (max-width: 991px) {
+  #hero > .container {
+    width: 100%;
+    padding: 0;
+  }
 }
 @media (min-width: 992px) {
   #heroCarousel {
@@ -9297,7 +9315,7 @@ article .related-resources .card .thumbnail .caption h3 {
 @media (min-width: 992px) {
   .home .navbar-right {
     float: left;
-    width: 25%;
+    width: 33.33333333%;
   }
 }
 @media (min-width: 1200px) {
@@ -9306,9 +9324,10 @@ article .related-resources .card .thumbnail .caption h3 {
     width: 33.33333333%;
   }
 }
-@media (min-width: 768px) and (max-width: 991px) {
+@media (max-width: 991px) {
   .home .navbar-right {
     padding-left: 0;
+    padding-right: 0;
   }
 }
 @media (max-width: 767px) {
