--- a/less/home.less
+++ b/less/home.less
@@ -3,11 +3,12 @@
 
 .home {
 	.navbar-right {
-		.make-md-column(3);
+		.make-md-column(4);
 		.make-lg-column(4);
 		padding-right:0;
-		@media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+		@media (max-width: @screen-sm-max) {
 			padding-left: 0;
+			padding-right:0;
 		}
 		@media (max-width: @screen-xs-max) {
 			padding-left: 10px;
