--- a/less/carousel.less
+++ b/less/carousel.less
@@ -11,6 +11,9 @@
 		position: relative;
 		.item {
       transition-property: opacity;
+      img {
+      	width: 100%;
+      }
       &:after {
       	content: "";
       	height: 100%;
@@ -93,6 +96,7 @@
 			font-size: 38px;
 			max-width: 95%;
 			letter-spacing: 1px;
+			line-height: 1.1;
 			.font-base;
 			font-weight: 800;
 			> a {
@@ -150,6 +154,7 @@
 				margin-top:0;
 				margin-bottom:.2em;
 				font-size: 1.3em;
+				line-height: 1.1;
 				.font-serif-heavy;
 				> a {
 					color: @text-color;
