--- a/less/home.less
+++ b/less/home.less
@@ -109,6 +109,7 @@
 			}
 			h3 {
 				margin-top: 0;
+				line-height: 1.1;
 			}
 		}
 		@media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
