--- a/less/navbar.less
+++ b/less/navbar.less
@@ -1,11 +1,12 @@
 // Custom Navbar
 
 @dropdown-bg: rgba(230, 231, 232, .97);
+@navbar-link-side-padding: 10px;
+@navbar-link-side-padding-sm: 8px;
 
 .subpage {
 	.navbar {
 		.navbar-right {
-			.make-sm-column(3);
 			.make-md-column(3);
 			@media (min-width: @screen-sm-min)  {
 				padding-left: 25px;
@@ -23,7 +24,6 @@
 		border:none !important;
 	}
 	.navbar-nav {
-
 		@media (min-width: @screen-md-min) {
 			margin-left: -11px;
 		}
@@ -50,18 +50,27 @@
 		}
 	}
 	.navbar-collapse {
-		padding-left: 0;
+		// padding-left: 0;
+		border: none;
+		@media (max-width: @screen-sm-max) {
+			margin-left: -10px;
+			margin-right: -10px;
+		}
+		@media (min-width: @screen-md-min) {
+			padding-left:0;
+		}
 	}
 	.navbar-nav {
-		@media (max-width: @screen-sm-max) {
-			margin-left: 10px;
-			margin-right:0;
-		}
+		// @media (max-width: @screen-sm-max) {
+		// 	margin-left: 0;
+		// 	margin-right:0;
+		// 	margin-top:0;
+		// }
 	}
 	.navbar-default {
 		.box-shadow(none);
 		@media (max-width: @screen-sm-max) {
-			.box-shadow(0 1px 3px rgba(0,0,0,.065));
+			.box-shadow(0 1px 3px rgba(0,0,0,.15));
 		}
 		border-radius: 0;
 		background: transparent;
@@ -94,7 +103,7 @@
 					margin-right: 5px;
 					z-index: 3;
 					position: absolute;
-					right:-6px;
+					right:-15px;
 					top: 2px;
 					font-size: 18px;
 					@media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
@@ -115,16 +124,18 @@
 				.my-placeholder(@gray1, 500, normal, 14px);
 			}
 		}
-		@navbar-link-side-padding: 12px;
-		@navbar-link-side-padding-sm: 8px;
-
 		.navbar-right {
-			@media (max-width: @screen-xs-max) {
-				// margin-left: @grid-gutter-width/2;
-			}
-			@media (min-width: @screen-sm-min)  {
-				padding-right: 0;
-			}
+			// @media (max-width: @screen-sm-max) {
+			// 	padding-left:0;
+			// 	padding-right:0;
+			// 	margin-left:0;
+			// 	margin-right:0;
+			// 	margin-bottom:0;
+			// }
+			// @media (min-width: @screen-sm-min)  {
+			// 	padding-right: 0;
+			// 	margin-left:0;
+			// }
 		}
 		.navbar-nav {
 			padding-bottom: 10px;
@@ -145,6 +156,10 @@
 					padding-right: @navbar-link-side-padding;
 					position: relative;
 					.caret {
+						margin-left: -3px;
+						@media (max-width: @screen-sm-max) {
+							display: none;
+						}
 						color: @gray2;
 						// @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
 						// 	position: absolute;
@@ -262,13 +277,15 @@
 		margin-top: -8px;
 	}
 	.navbar-nav {
-		padding-top: @grid-gutter-width/3;
-		padding-bottom: @grid-gutter-width/8;
+		@media (min-width: @screen-md-min) {
+			padding-top: @grid-gutter-width/3;
+			padding-bottom: @grid-gutter-width/8;
+		}
 	}
 
 	.nav-item-more {
-		border-left: 1px solid @gray3;
 		@media (min-width: @screen-md-min) {
+			border-left: 1px solid @gray3;
 			margin-left: @grid-gutter-width/6;
 			padding-left: @grid-gutter-width/6;
 		}
@@ -277,10 +294,11 @@
 		}
 	}
 	.navbar-right {
-		.make-sm-column(2);
-		.make-md-column(2);
-		padding-right:0;
-		padding-left: 0;
+		.make-md-column(3);
+		@media (min-width: @screen-sm-min) {
+			padding-right:0;
+			padding-left: 0;
+		}
 		.navbar-form {
 			width: 100%;
 
@@ -391,7 +409,7 @@
 		background-color: @brand-primary;
 		border-color: @brand-primary !important;
 		color: #fff;
-		margin-right: 27px;
+		margin-right: 10px;
 		@media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
 			margin-right: 10px;
 		}
