--- a/css/theme.css
+++ b/css/theme.css
@@ -9287,28 +9287,39 @@ article .related-resources .card .thumbnail .caption h3 {
   color: #fff;
 }
 .hero .hero-title h3 {
-  font-size: 45px;
-  max-width: 500px;
+  font-size: 38px;
+  max-width: 95%;
   letter-spacing: 1px;
+  line-height: 1;
   font-family: "Gotham A", "Gotham B", Helvetica, Arial, sans-serif;
   font-weight: 800;
 }
 .hero .hero-title h3 > a {
   color: #fff;
 }
-.hero .hero-title p.byline {
-  margin-bottom: .4em;
-  font-size: 11px;
-  font-family: "Gotham A", "Gotham B", Helvetica, Arial, sans-serif;
-  color: #302f32;
-  font-weight: 600;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  color: #c5c7c9;
-  margin-bottom: 0;
+@media (max-width: 767px) {
+  .hero .hero-title h3 {
+    font-size: 30px;
+    margin-bottom: 5px;
+  }
 }
-.hero .hero-title p.byline .name {
-  font-weight: 600;
+@media (min-width: 768px) and (max-width: 991px) {
+  .hero .hero-title h3 {
+    font-size: 36px;
+  }
+}
+.hero .hero-title p.byline {
+  font-style: italic;
+  font-family: "Archer A", "Archer B", garamond, times, 'times new roman', serif;
+  margin-bottom: 0;
+  z-index: 4;
+  position: relative;
+  display: block;
+  color: #e6e7e8;
+  font-size: .8em;
+}
+.hero .hero-title p.byline a {
+  color: #fff;
 }
 @media (max-width: 767px) {
   .hero .hero-title {
@@ -10264,6 +10275,16 @@ a.resource-list .resource-tags a:focus {
   .snippet .snippet-info {
     float: left;
     width: 75%;
+  }
+}
+@media (max-width: 767px) {
+  html,
+  body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
   }
 }
 .sizy {
