--- a/less/theme.less
+++ b/less/theme.less
@@ -626,20 +626,35 @@ article {
 			color: #fff;
 		}
 		h3 {
-			font-size: 45px;
-			max-width: 500px;
+			font-size: 38px;
+			max-width: 95%;
 			letter-spacing: 1px;
+			line-height: 1;
 			.font-base;
 			font-weight: 800;
 			> a {
 				color: #fff;
 			}
+			@media (max-width: @screen-xs-max) {
+				font-size: 30px;
+				margin-bottom: 5px;
+			}
+			@media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+				font-size: 36px;
+			}
 		}
 		p.byline {
-			.byline;
-			color: @gray2;
-			margin-bottom: 0;
-
+			font-style: italic;
+			.font-secondary;
+			margin-bottom:0;
+			z-index: 4;
+			position: relative;
+			display: block;
+			color: @gray3;
+			font-size: .8em;
+			a {
+				color: #fff;
+			}
 		}
 	}
 	@media (max-width: @screen-xs-max) {
@@ -1246,6 +1261,16 @@ article {
 		.make-sm-column(9);
 	}
 
+}
+
+@media (max-width: @screen-xs-max) {
+	html,body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+	}
 }
 
 .sizy {
