--- a/less/theme.less
+++ b/less/theme.less
@@ -1264,9 +1264,9 @@ article {
 }
 
 @media (max-width: @screen-xs-max) {
+	// This hack fixes the white space on the right side of iOS. 
 	html,body {
     width: 100%;
-    height: 100%;
     margin: 0px;
     padding: 0px;
     overflow-x: hidden; 
