--- a/css/theme.css
+++ b/css/theme.css
@@ -8195,7 +8195,8 @@ a:hover {
 .site-header .navbar-default .navbar-nav {
   padding-bottom: 10px;
 }
-.site-header .navbar-default .navbar-nav > li > a {
+.site-header .navbar-default .navbar-nav > li > a,
+.site-header .navbar-default .navbar-nav #utility_nav_mobile > li > a {
   font-family: "Gotham A", "Gotham B", Helvetica, Arial, sans-serif;
   color: #302f32;
   font-weight: 600;
@@ -8207,41 +8208,50 @@ a:hover {
   padding-left: 10px;
   padding-right: 10px;
   position: relative;
+  display: block;
 }
-.site-header .navbar-default .navbar-nav > li > a .caret {
+.site-header .navbar-default .navbar-nav > li > a .caret,
+.site-header .navbar-default .navbar-nav #utility_nav_mobile > li > a .caret {
   margin-left: -3px;
   color: #c5c7c9;
 }
 @media (max-width: 991px) {
-  .site-header .navbar-default .navbar-nav > li > a .caret {
+  .site-header .navbar-default .navbar-nav > li > a .caret,
+  .site-header .navbar-default .navbar-nav #utility_nav_mobile > li > a .caret {
     display: none;
   }
 }
 @media (max-width: 767px) {
-  .site-header .navbar-default .navbar-nav > li > a {
-    padding-top: 14px;
-    padding-bottom: 14px;
+  .site-header .navbar-default .navbar-nav > li > a,
+  .site-header .navbar-default .navbar-nav #utility_nav_mobile > li > a {
+    padding-top: 8px;
+    padding-bottom: 8px;
     padding-left: 20px;
     padding-right: 20px;
   }
 }
 @media (min-width: 768px) and (max-width: 991px) {
-  .site-header .navbar-default .navbar-nav > li > a {
+  .site-header .navbar-default .navbar-nav > li > a,
+  .site-header .navbar-default .navbar-nav #utility_nav_mobile > li > a {
     padding-left: 8px;
     padding-right: 8px;
   }
 }
-.site-header .navbar-default .navbar-nav > li > a:hover {
+.site-header .navbar-default .navbar-nav > li > a:hover,
+.site-header .navbar-default .navbar-nav #utility_nav_mobile > li > a:hover {
   color: #086291;
 }
 .site-header .navbar-default .navbar-nav > li.active > a,
-.site-header .navbar-default .navbar-nav > li.active a:hover {
+.site-header .navbar-default .navbar-nav #utility_nav_mobile > li.active > a,
+.site-header .navbar-default .navbar-nav > li.active a:hover,
+.site-header .navbar-default .navbar-nav #utility_nav_mobile > li.active a:hover {
   color: #086291;
   background: transparent;
   -webkit-box-shadow: none;
   box-shadow: none;
 }
-.site-header .navbar-default .navbar-nav > li.active > a:before {
+.site-header .navbar-default .navbar-nav > li.active > a:before,
+.site-header .navbar-default .navbar-nav #utility_nav_mobile > li.active > a:before {
   font-family: "Ionicons";
   content: "\f2fc";
   display: inline-block;
@@ -10244,6 +10254,30 @@ a.resource-list .resource-tags a:focus {
   font-family: "Gotham A", "Gotham B", Helvetica, Arial, sans-serif;
   font-size: 13px;
 }
+.contact section.block {
+  padding-bottom: 40px 0;
+  margin-bottom: 40px;
+  display: block;
+}
+.contact #mailing_addresses address {
+  float: left;
+  width: 100%;
+  position: relative;
+  min-height: 1px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+@media (min-width: 768px) {
+  .contact #mailing_addresses address {
+    float: left;
+    width: 33.33333333%;
+  }
+}
+@media (min-width: 768px) {
+  .contact .form .btn {
+    margin-left: 6.66666667px;
+  }
+}
 .snippet {
   margin-left: -20px;
   margin-right: -20px;
@@ -10256,14 +10290,21 @@ a.resource-list .resource-tags a:focus {
   padding-left: 20px;
   padding-right: 20px;
 }
+@media (max-width: 767px) {
+  .snippet .logo {
+    display: none;
+  }
+}
 @media (min-width: 768px) {
   .snippet .logo {
     float: left;
     width: 25%;
   }
 }
-.snippet .logo img {
-  max-width: 150px;
+.snippet .logo a > img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 .snippet .snippet-info {
   position: relative;
