--- a/less/navbar.less
+++ b/less/navbar.less
@@ -146,7 +146,7 @@
 			// 	margin-left: -@navbar-link-side-padding;
 			// }
 
-			> li {
+			> li, #utility_nav_mobile > li {
 				> a {
 					.sans-upper;
 					font-size: 14px;
@@ -155,6 +155,7 @@
 					padding-left: @navbar-link-side-padding;
 					padding-right: @navbar-link-side-padding;
 					position: relative;
+					display: block;
 					.caret {
 						margin-left: -3px;
 						@media (max-width: @screen-sm-max) {
@@ -168,8 +169,8 @@
 						// }
 					}
 					@media (max-width: @screen-xs-max) {
-						padding-top: 14px;
-						padding-bottom: 14px;
+						padding-top: 8px;
+						padding-bottom: 8px;
 						padding-left: @grid-gutter-width/2;
 						padding-right: @grid-gutter-width/2;
 					}
