--- a/css/theme.css
+++ b/css/theme.css
@@ -10293,8 +10293,10 @@ a.resource-list .resource-tags a:focus {
     width: 100%;
   }
 }
-.store .featured-products.featured-products-row2 {
-  padding-top: 40px;
+.store .featured-products.featured-products-row2,
+.store .featured-products.featured-products-row3 {
+  padding-top: 80px;
+  clear: both;
 }
 .store .featured-products > div .row {
   margin-left: -8px;
@@ -10324,14 +10326,35 @@ a.resource-list .resource-tags a:focus {
     width: 50%;
   }
 }
-.store .featured-products .product {
+.store .featured-products.erlc-authors > .row {
+  margin-left: -8px;
+  margin-right: -8px;
+}
+.store .featured-products.erlc-authors .product {
   position: relative;
+  min-height: 1px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-left: 8px;
+  padding-right: 8px;
+}
+@media (min-width: 768px) {
+  .store .featured-products.erlc-authors .product {
+    float: left;
+    width: 16.66666667%;
+  }
+}
+.store .featured-products .product {
   float: left;
   width: 33.33333333%;
   min-height: 1px;
   padding-left: 20px;
   padding-right: 20px;
   padding: 8px;
+  position: relative;
+  padding-bottom: 100px;
+  margin-bottom: 40px;
+  min-height: 450px !important;
 }
 .store .featured-products .product img {
   display: block;
@@ -10339,9 +10362,10 @@ a.resource-list .resource-tags a:focus {
   height: auto;
 }
 .store .featured-products .product h3 {
-  font-size: 15px;
+  font-size: 16px;
   line-height: 1.3em;
   margin-top: 10px;
+  margin-bottom: 0;
   font-family: "Archer Heavyweight A", "Archer Heavyweight B";
   font-style: italic;
   font-weight: 800;
@@ -10350,15 +10374,18 @@ a.resource-list .resource-tags a:focus {
 .store .featured-products .product strong {
   font-size: 18px;
 }
-.store .featured-products .product .regular-price {
+.store .featured-products .product .regular-price.strike {
   color: #B70216;
   text-transform: uppercase;
   font-size: .75em;
 }
-.store .featured-products .product .regular-price strong {
+.store .featured-products .product .regular-price.strike strong {
   font-size: 1.5em;
 }
-.store .featured-products .product .sale-price .sale-type {
+.store .featured-products .product .regular-price.strike .sale-type {
+  color: inherit;
+}
+.store .featured-products .product .sale-type {
   text-transform: uppercase;
   color: #888;
   font-size: 11px;
@@ -10366,14 +10393,21 @@ a.resource-list .resource-tags a:focus {
 .store .featured-products .product .btn {
   width: 100%;
   text-shadow: none;
+  margin-top: 5px;
 }
 .store .featured-products .product .btn.btn-default {
   background-color: #eee;
+  color: #302f32;
   -webkit-box-shadow: none;
   box-shadow: none;
 }
 .store .featured-products .product .btn.btn-default:hover {
   background-color: #d5d5d5;
+}
+.store .featured-products .product .product-price {
+  position: absolute;
+  bottom: 0;
+  width: calc(91%);
 }
 .snippet {
   margin-left: -20px;
