--- a/less/theme.less
+++ b/less/theme.less
@@ -1280,8 +1280,10 @@ article {
 		padding-bottom: @grid-gutter-width;
 	}
 	.featured-products {
-		&.featured-products-row2 {
-			padding-top: @grid-gutter-width;
+		&.featured-products-row2,
+		&.featured-products-row3 {
+			padding-top: @grid-gutter-width*2;
+			clear: both;
 		}
 		> div {
 			.row {
@@ -1295,46 +1297,74 @@ article {
 		.rm-books {
 			.make-sm-column(6);
 		}
+		&.erlc-authors {
+			
+			> .row {
+				margin-left: -@store-product-gutter;
+				margin-right: -@store-product-gutter;
+			}
+			.product {
+
+				.make-sm-column(2);
+				padding-left: @store-product-gutter;
+				padding-right: @store-product-gutter;
+			}
+		}
 		.product {
 			.make-xs-column(4);
 			padding: @store-product-gutter;
+			position: relative;
+			padding-bottom: 100px;
+			margin-bottom: @grid-gutter-width;
+			min-height: 450px !important;
 			img {
 				.img-responsive;
 			}
 			h3 {
-				font-size: 15px;
+				font-size: 16px;
 				line-height: 1.3em;
 				margin-top: 10px;
+				margin-bottom:0;
 				.font-serif-heavy;
 			}
 			strong {
 				font-size: 18px;
 			}
 			.regular-price {
-				color: @brand-danger;
-				text-transform: uppercase;
-				font-size: .75em;
-				strong {
-					font-size: 1.5em;
+				&.strike {
+					color: @brand-danger;
+					text-transform: uppercase;
+					font-size: .75em;
+					strong {
+						font-size: 1.5em;
+					}
+					.sale-type {
+						color: inherit;
+					}
 				}
 			}
-			.sale-price {
-				.sale-type {
-					text-transform: uppercase;
-					color: #888;
-					font-size: 11px;
-				}
+			.sale-type {
+				text-transform: uppercase;
+				color: #888;
+				font-size: 11px;
 			}
 			.btn {
 				width: 100%;
 				text-shadow: none;
+				margin-top: 5px;
 				&.btn-default {
 					background-color: #eee;
+					color: @text-color;
 					.box-shadow(none);
 					&:hover {
 						background-color: darken(#eee, 10%);
 					}
 				}
+			}
+			.product-price {
+				position: absolute;
+				bottom:0;
+				width: calc(100% - 9px);
 			}
 		}
 	}
