--- a/css/theme.css
+++ b/css/theme.css
@@ -10299,8 +10299,8 @@ a.resource-list .resource-tags a:focus {
   clear: both;
 }
 .store .featured-products > div .row {
-  margin-left: -8px;
-  margin-right: -8px;
+  margin-left: -5px;
+  margin-right: -5px;
 }
 .store .featured-products .ebooks {
   position: relative;
@@ -10327,16 +10327,19 @@ a.resource-list .resource-tags a:focus {
   }
 }
 .store .featured-products.erlc-authors > .row {
-  margin-left: -8px;
-  margin-right: -8px;
+  margin-left: -5px;
+  margin-right: -5px;
 }
 .store .featured-products.erlc-authors .product {
   position: relative;
   min-height: 1px;
   padding-left: 20px;
   padding-right: 20px;
-  padding-left: 8px;
-  padding-right: 8px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+.store .featured-products.erlc-authors .product:nth-child(6n+1) {
+  clear: both;
 }
 @media (min-width: 768px) {
   .store .featured-products.erlc-authors .product {
@@ -10345,12 +10348,16 @@ a.resource-list .resource-tags a:focus {
   }
 }
 .store .featured-products .product {
+  position: relative;
   float: left;
   width: 33.33333333%;
   min-height: 1px;
   padding-left: 20px;
   padding-right: 20px;
-  padding: 8px;
+  padding: 5px;
+}
+.store .featured-products .product .product-inner {
+  border: 1px solid #eee;
   position: relative;
   padding-bottom: 100px;
   margin-bottom: 40px;
@@ -10364,8 +10371,9 @@ a.resource-list .resource-tags a:focus {
 .store .featured-products .product h3 {
   font-size: 16px;
   line-height: 1.3em;
-  margin-top: 10px;
+  margin-top: 5px;
   margin-bottom: 0;
+  padding: 0 5px 0 5px;
   font-family: "Archer Heavyweight A", "Archer Heavyweight B";
   font-style: italic;
   font-weight: 800;
@@ -10373,6 +10381,10 @@ a.resource-list .resource-tags a:focus {
 }
 .store .featured-products .product strong {
   font-size: 18px;
+}
+.store .featured-products .product .product-price {
+  padding: 5px;
+  line-height: 1.3;
 }
 .store .featured-products .product .regular-price.strike {
   color: #B70216;
@@ -10391,7 +10403,7 @@ a.resource-list .resource-tags a:focus {
   font-size: 11px;
 }
 .store .featured-products .product .btn {
-  width: 100%;
+  width: calc(110%);
   text-shadow: none;
   margin-top: 5px;
 }
