--- a/less/theme.less
+++ b/less/theme.less
@@ -1271,7 +1271,7 @@ article {
 
 // ------------------------------------------------------------- Store
 
-@store-product-gutter: 8px;
+@store-product-gutter: 5px;
 
 .store {
 	.carousel-inner-wrapper {
@@ -1304,31 +1304,43 @@ article {
 				margin-right: -@store-product-gutter;
 			}
 			.product {
-
+				&:nth-child(6n+1) {
+					clear: both;
+				}
 				.make-sm-column(2);
 				padding-left: @store-product-gutter;
 				padding-right: @store-product-gutter;
 			}
 		}
 		.product {
+			.product-inner {
+				border: 1px solid #eee;
+				position: relative;
+				padding-bottom: 100px;
+				margin-bottom: @grid-gutter-width;
+				min-height: 450px !important;
+			}
 			.make-xs-column(4);
 			padding: @store-product-gutter;
-			position: relative;
-			padding-bottom: 100px;
-			margin-bottom: @grid-gutter-width;
-			min-height: 450px !important;
+			
+
 			img {
 				.img-responsive;
 			}
 			h3 {
 				font-size: 16px;
 				line-height: 1.3em;
-				margin-top: 10px;
+				margin-top: 5px;
 				margin-bottom:0;
+				padding: 0 5px 0 5px;
 				.font-serif-heavy;
 			}
 			strong {
 				font-size: 18px;
+			}
+			.product-price {
+				padding: 5px;
+				line-height: 1.3;
 			}
 			.regular-price {
 				&.strike {
@@ -1349,7 +1361,7 @@ article {
 				font-size: 11px;
 			}
 			.btn {
-				width: 100%;
+				width: calc(100% + 10px);
 				text-shadow: none;
 				margin-top: 5px;
 				&.btn-default {
