--- a/less/theme.less
+++ b/less/theme.less
@@ -1282,7 +1282,7 @@ article {
 	.featured-products {
 		&.featured-products-row2,
 		&.featured-products-row3 {
-			padding-top: @grid-gutter-width*2;
+			// padding-top: @grid-gutter-width*2;
 			clear: both;
 		}
 		> div {
@@ -1292,10 +1292,10 @@ article {
 			}
 		}
 		.ebooks {
-			.make-sm-column(6);
+			.make-sm-column(12);
 		}
 		.rm-books {
-			.make-sm-column(6);
+			.make-sm-column(12);
 		}
 		&.erlc-authors {
 			
@@ -1304,10 +1304,10 @@ article {
 				margin-right: -@store-product-gutter;
 			}
 			.product {
-				&:nth-child(6n+1) {
+				&:nth-child(4n+1) {
 					clear: both;
 				}
-				.make-sm-column(2);
+				.make-sm-column(3);
 				padding-left: @store-product-gutter;
 				padding-right: @store-product-gutter;
 			}
@@ -1318,9 +1318,9 @@ article {
 				position: relative;
 				padding-bottom: 100px;
 				margin-bottom: @grid-gutter-width;
-				min-height: 450px !important;
+				min-height: 470px !important;
 			}
-			.make-xs-column(4);
+			.make-xs-column(3);
 			padding: @store-product-gutter;
 			
 
