make carousel functional, make layout more mobile friendly

--- a/css/theme.css
+++ b/css/theme.css
@@ -10278,6 +10278,25 @@ a.resource-list .resource-tags a:focus {
     margin-left: 6.66666667px;
   }
 }
+.store .carousel {
+  position: relative;
+}
+.store .carousel .carousel-control {
+  background: rgba(0, 0, 0, 0.35) !important;
+  display: block;
+  z-index: 2;
+  width: 40px;
+  height: 50px;
+  position: absolute;
+  top: 50%;
+  margin-top: -25px;
+}
+.store .carousel .carousel-control > .ion-chevron-left,
+.store .carousel .carousel-control > .ion-chevron-right {
+  height: 100%;
+  display: block;
+  line-height: 50px;
+}
 .store .carousel-inner-wrapper {
   float: left;
   width: 100%;
@@ -10285,12 +10304,31 @@ a.resource-list .resource-tags a:focus {
   min-height: 1px;
   padding-left: 20px;
   padding-right: 20px;
+  padding-right: 0px;
   padding-bottom: 40px;
 }
-@media (min-width: 1250px) {
+@media (min-width: 992px) {
   .store .carousel-inner-wrapper {
     float: left;
-    width: 100%;
+    width: 75%;
+  }
+}
+.store .carousel-sidebar {
+  position: relative;
+  min-height: 1px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-left: 0px;
+}
+@media (min-width: 992px) {
+  .store .carousel-sidebar {
+    float: left;
+    width: 25%;
+  }
+}
+@media (max-width: 991px) {
+  .store .carousel-sidebar {
+    display: none;
   }
 }
 .store .featured-products.featured-products-row2,
@@ -10337,8 +10375,15 @@ a.resource-list .resource-tags a:focus {
   padding-left: 5px;
   padding-right: 5px;
 }
-.store .featured-products.erlc-authors .product:nth-child(4n+1) {
-  clear: both;
+@media (max-width: 767px) {
+  .store .featured-products.erlc-authors .product:nth-child(odd) {
+    clear: both;
+  }
+}
+@media (min-width: 768px) {
+  .store .featured-products.erlc-authors .product:nth-child(4n+1) {
+    clear: both;
+  }
 }
 @media (min-width: 768px) {
   .store .featured-products.erlc-authors .product {
@@ -10347,9 +10392,9 @@ a.resource-list .resource-tags a:focus {
   }
 }
 .store .featured-products .product {
-  position: relative;
   float: left;
-  width: 25%;
+  width: 50%;
+  position: relative;
   min-height: 1px;
   padding-left: 20px;
   padding-right: 20px;
@@ -10360,7 +10405,37 @@ a.resource-list .resource-tags a:focus {
   position: relative;
   padding-bottom: 100px;
   margin-bottom: 40px;
-  min-height: 470px !important;
+}
+@media (min-width: 480px) {
+  .store .featured-products .product .product-inner {
+    min-height: 435px;
+  }
+}
+@media (min-width: 768px) {
+  .store .featured-products .product .product-inner {
+    min-height: 435px;
+  }
+}
+@media (min-width: 992px) {
+  .store .featured-products .product .product-inner {
+    min-height: 470px;
+  }
+}
+@media (min-width: 1250px) {
+  .store .featured-products .product .product-inner {
+    min-height: 500px;
+  }
+}
+@media (min-width: 768px) {
+  .store .featured-products .product {
+    float: left;
+    width: 25%;
+  }
+}
+@media (max-width: 767px) {
+  .store .featured-products .product:nth-child(odd) {
+    clear: both;
+  }
 }
 .store .featured-products .product img {
   display: block;
