--- a/less/navbar.less
+++ b/less/navbar.less
@@ -241,7 +241,7 @@
 // --------------------------------------------- Sticky Header
 
 #header_wrap {
-	transition: all 0.4s ease;
+	// transition: all 0.4s ease;
 	
 	.container {
 		background-color: #fff;
